k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-devops-service
  annotations:
    cloud.google.com/backend-config: '{"default": "devsu-demo-health-check"}'    
    cloud.google.com/neg: '{"ingress": true}'

spec:
  type: NodePort
  selector:
    app: devsu-demo-devops
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
